--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
                     <p class="lead mb-5">I'm a senior at University of Pittsburgh (expected to graduate in December 2020), starting to look for a spring internship or research opportunity related to the Computer Science field, especially Computer Graphics. As a Computer Science major, I'm fascinated by the Art made and enhanced by technology, including visual effects in films and Augment Reality.</p>
 
                     <p class="lead mb-5">   As such, I've taken core courses, high-level advanced courses in computer science, and participated in several hackathons in Pittsburgh. And now I'd like to put that experience to good use, contributing to learning more about new technologies and advancing the technology. </p>
+                    <a href="https://drive.google.com/file/d/1tyG4oeq_r4dMZulPyEAuLO1ToARd4c-I/view?usp=sharing" download="Siyu_Zhang_Latest_Resume">
+                        <p>Download Siyu's Resume</p>
+                    </a>
+                    <br>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/siyu-zhang-1966a717a/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/CU2018"><i class="fab fa-github"></i></a>
