--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <a class="social-icon" href="https://github.com/CU2018"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="https://www.youtube.com/channel/UCAY_ZKih5pyyMWnMfb3WHrQ"><i class="fab fa-youtube"></i></a>
                         <a class="social-icon" href="https://www.yelp.com/user_details?userid=WowhLAOgB_YIT4PYQogTdA"><i class="fab fa-yelp"></i></a>
-                        <a class="social-icon" href="http://www.dynamicdrive.com" rel="imgtip[0]"><i class="fab fa-weixin"></i></a>
+                        <a class="social-icon" href="https://drive.google.com/file/d/1g4pQgENKm-9zZKCglpUdk3XMSHx4OE3g/view?usp=sharing" rel="imgtip[0]"><i class="fab fa-weixin"></i></a>
                     </div>
                 </div>
             </section>
