added essays links

--- a/index.html
+++ b/index.html
@@ -169,14 +169,6 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i>&nbsp August 2017 - December 2020</span></div>
                     </div>
-                    <!--<div class="d-flex flex-column flex-md-row justify-content-between">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Urumqi Bayi High School</h3>
-                            <div class="subheading mb-3">Technology Magnet Program</div>
-                            <p>GPA: 3.56</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2002 - May 2006</span></div>
-                    </div>-->
                 </div>
             </section>
             <hr class="m-0" />
@@ -184,15 +176,6 @@
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Skills</h2>
-                    
-                    <!-- <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><i class="fab fa-cuttlefish"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-python"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-java"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-                    </ul> -->
                     <div class="subheading mb-3">Programming Languages</div>
                     <p style="font-size:1.4rem;">
                         <span class="badge badge-info">C</span>
@@ -366,7 +349,7 @@
                     <ul class="fa-ul mb-0">                  
                         <li>
                             <span class="fa-li"><i class="fas fa-file-alt text-warning"></i></span>
-                            <a href=""><b>Mirrored Heroines: A Comparison of Ruan Lingyu in <i>Center Stage (1992)</i> and Frida Kahlo in <i>Frida (2002)</i></b></a>
+                            <a href="https://zhuanlan.zhihu.com/p/290090084"><b>Mirrored Heroines: A Comparison of Ruan Lingyu in <i>Center Stage (1992)</i> and Frida Kahlo in <i>Frida (2002)</i></b></a>
                             <ul class="fa-ul mb-0">
                                 <li>
                                     <span class="fa-li"><i class="fas fa-calendar-alt"></i></span>
@@ -383,7 +366,7 @@
                         <br>
                         <li>
                             <span class="fa-li"><i class="fas fa-file-alt text-warning"></i></span>
-                            <a href=""><b>The “Truth” is up to You: Analysis of the Narrative Combination of the Original Footage and Interviews in the Film <i>Grizzly Man (2005)</i></b></a>
+                            <a href="https://zhuanlan.zhihu.com/p/290151725"><b>The “Truth” is up to You: Analysis of the Narrative Combination of the Original Footage and Interviews in the Film <i>Grizzly Man (2005)</i></b></a>
                             <ul class="fa-ul mb-0">
                                 <li>
                                     <span class="fa-li"><i class="fas fa-calendar-alt"></i></span>
@@ -398,7 +381,7 @@
                         <br>
                         <li>
                             <span class="fa-li"><i class="fas fa-file-alt text-warning"></i></span>
-                            <a href=""><b>Frida and Gender: Analysis of the "Tango Scene" in the Film Frida</b></a>
+                            <a href="https://zhuanlan.zhihu.com/p/290163027"><b>Frida and Gender: Analysis of the "Tango Scene" in the Film Frida</b></a>
                             <ul class="fa-ul mb-0">
                                 <li>
                                     <span class="fa-li"><i class="fas fa-calendar-alt"></i></span>
@@ -413,7 +396,7 @@
                         <br>
                         <li>
                             <span class="fa-li"><i class="fas fa-file-alt text-warning"></i></span>
-                            <a href=""><b>Mark Lee – the Composite Hero of Chinese and Western Culture</b></a>
+                            <a href="https://zhuanlan.zhihu.com/p/290073139"><b>Mark Lee – the Composite Hero of Chinese and Western Culture</b></a>
                             <ul class="fa-ul mb-0">
                                 <li>
                                     <span class="fa-li"><i class="fas fa-calendar-alt"></i></span>
@@ -428,7 +411,7 @@
                         <br>
                         <li>
                             <span class="fa-li"><i class="fas fa-file-alt text-warning"></i></span>
-                            <a href=""><b>The Other Piece of “Puzzle”: Fallen Angels</b></a>
+                            <a href="https://zhuanlan.zhihu.com/p/290054861"><b>The Other Piece of “Puzzle”: Fallen Angels</b></a>
                             <ul class="fa-ul mb-0">
                                 <li>
                                     <span class="fa-li"><i class="fas fa-calendar-alt"></i></span>
@@ -443,7 +426,7 @@
                         <br>
                         <li>
                             <span class="fa-li"><i class="fas fa-file-alt text-warning"></i></span>
-                            <a href=""><b>The Poignant Reality of Italian Neorealism: Umberto D.: Get Tired of the Profit-driven World</b></a>
+                            <a href="https://zhuanlan.zhihu.com/p/290142495"><b>The Poignant Reality of Italian Neorealism: Umberto D.: Get Tired of the Profit-driven World</b></a>
                             <ul class="fa-ul mb-0">
                                 <li>
                                     <span class="fa-li"><i class="fas fa-calendar-alt"></i></span>
