--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                             <h3 class="mb-0">University of Pittsburgh</h3>
                             <div class="subheading mb-3">Bachelor of Science + Digital Media Certificate</div>
                             <div>Computer Science (Honor)</div>
-                            <p>GPA: 3.99</p>
+                            <p>GPA: 3.99 / 4.0</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i>&nbsp August 2017 - December 2020</span></div>
                     </div>
