added new essays

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#essays">Film Essays</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#essays">Film&Media Essays</a></li>
                     <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#gallery">Gallery</a></li> -->
                 </ul>
             </div>
@@ -344,9 +344,37 @@
             <!-- Essays-->
             <section class="resume-section" id="essays">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Film Essays</h2>
+                    <h2 class="mb-5">Film&Media Essays</h2>
                     <p>Apart from working on projects related to Computer Science (especially Computer Graphics), I also wrote many analysis essays on films during my undergraduate years.</p>
-                    <ul class="fa-ul mb-0">                  
+                    <ul class="fa-ul mb-0">       
+                        <li>
+                            <span class="fa-li"><i class="fas fa-file-alt text-warning"></i></span>
+                            <a href="https://zhuanlan.zhihu.com/p/336403781"><b>Rising from the Fans-culture: China’s Animation Industry under the “Customized” Participatory Culture</b></a>
+                            <ul class="fa-ul mb-0">
+                                <li>
+                                    <span class="fa-li"><i class="fas fa-calendar-alt"></i></span>
+                                    Time: 11.2020
+                                </li>
+                            </ul>
+                        </li>
+                        <br> 
+                        <li>
+                            <span class="fa-li"><i class="fas fa-file-alt text-warning"></i></span>
+                            <a href="https://zhuanlan.zhihu.com/p/336406181"><b>Fight against the Hegemony: New Interpretations of Masculinity from Chiron in Moonlight (Jenkins, 2016) to Ben in Better Luck Tomorrow (Lin, 2002)</b></a>
+                            <ul class="fa-ul mb-0">
+                                <li>
+                                    <span class="fa-li"><i class="fas fa-calendar-alt"></i></span>
+                                    Time: 11.2020
+                                </li>
+                                <li>
+                                    <span class="fa-li"><i class="fas fa-caret-right"></i></span>
+                                    Related Film(s): 
+                                    <br><a href="https://www.imdb.com/title/tt4975722/?ref_=fn_al_tt_1"><i>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Moonlight (Barry Jenkins, 2016)</i></a>
+                                    <br><a href="https://www.imdb.com/title/tt0280477/?ref_=nv_sr_srsg_0"><i>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Better Luck Tomorrow (Justin Lin, 2002</i></a>
+                                </li>
+                            </ul>
+                        </li>
+                        <br>          
                         <li>
                             <span class="fa-li"><i class="fas fa-file-alt text-warning"></i></span>
                             <a href="https://zhuanlan.zhihu.com/p/290090084"><b>Mirrored Heroines: A Comparison of Ruan Lingyu in <i>Center Stage (1992)</i> and Frida Kahlo in <i>Frida (2002)</i></b></a>
