Added two essays

--- a/index.html
+++ b/index.html
@@ -364,13 +364,13 @@
                             <ul class="fa-ul mb-0">
                                 <li>
                                     <span class="fa-li"><i class="fas fa-calendar-alt"></i></span>
-                                    Time: 11.2020
+                                    Time: 11.2020d
                                 </li>
                                 <li>
                                     <span class="fa-li"><i class="fas fa-caret-right"></i></span>
                                     Related Film(s): 
                                     <br><a href="https://www.imdb.com/title/tt4975722/?ref_=fn_al_tt_1"><i>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Moonlight (Barry Jenkins, 2016)</i></a>
-                                    <br><a href="https://www.imdb.com/title/tt0280477/?ref_=nv_sr_srsg_0"><i>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Better Luck Tomorrow (Justin Lin, 2002</i></a>
+                                    <br><a href="https://www.imdb.com/title/tt0280477/?ref_=nv_sr_srsg_0"><i>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Better Luck Tomorrow (Justin Lin, 2002)</i></a>
                                 </li>
                             </ul>
                         </li>
