Added Chinese version Resume

--- a/index.html
+++ b/index.html
@@ -51,8 +51,12 @@
                     <p class="lead mb-5">I'm a CG enthusiast who has a BS degree in Computer Science and graduated from the University of Pittsburgh recently (2020.12.12), starting to look for a spring internship or research opportunity related to the Computer Science field, especially Computer Graphics. As a Computer Science major, I'm fascinated by the Art made and enhanced by technology, including visual effects in films and Augment Reality.</p>
 
                     <p class="lead mb-5">   As such, I've taken core courses, high-level advanced courses in computer science, and participated in several hackathons in Pittsburgh. And now I'd like to put that experience to good use, contributing to learning more about new technologies and advancing the technology. </p>
-                    <a href="https://drive.google.com/file/d/1tyG4oeq_r4dMZulPyEAuLO1ToARd4c-I/view?usp=sharing" download="Siyu_Zhang_Latest_Resume">
+                    <a href="https://drive.google.com/file/d/1eilae5Xzbe90NxWci5JnqrLwMYj_7_ga/view?usp=sharing" download="Siyu_Zhang_Latest_Resume">
                         <p>Download Siyu's Resume</p>
+                    </a>
+                    <br>
+                    <a href="https://drive.google.com/file/d/1cxlnTN6CAPdHA2IgmJ9YOQRm2-Ig5Xll/view?usp=sharing" download="Siyu_Zhang_Latest_Resume">
+                        <p>下载张思语的简历</p>
                     </a>
                     <br>
                     <div class="social-icons">
