--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
 
                     <p class="lead mb-5">   As such, I've taken core courses, high-level advanced courses in computer science, and participated in several hackathons in Pittsburgh. And now I'd like to put that experience to good use, contributing to learning more about new technologies and advancing the technology. </p>
                     <a href="https://drive.google.com/file/d/1eilae5Xzbe90NxWci5JnqrLwMYj_7_ga/view?usp=sharing" download="Siyu_Zhang_Latest_Resume">
-                        <p>Download Siyu's Resume</p>
+                        Download Siyu's Resume
                     </a>
-                    <br>
+                    <span> / </span>
                     <a href="https://drive.google.com/file/d/1cxlnTN6CAPdHA2IgmJ9YOQRm2-Ig5Xll/view?usp=sharing" download="Siyu_Zhang_Latest_Resume">
-                        <p>下载张思语的简历</p>
+                        下载张思语的简历
                     </a>
-                    <br>
+                    <br><br>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/siyu-zhang-1966a717a/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/CU2018"><i class="fab fa-github"></i></a>
