--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-bullseye text-warning"></i></span>
-                            <a href="https://youtu.be/nLs9hbQGOaU" rel="imgtip[1]"><b>C_U Fish / A Blender project led by Professor Brian A. Barsky / 09.2020 – 11.2020</b></a>
+                            <a href="https://github.com/CU2018/C_U-Fish-Blender" rel="imgtip[1]"><b>C_U Fish / A Blender project led by Professor Brian A. Barsky / 09.2020 – 11.2020</b></a>
                             <ul class="fa-ul mb-0">
                                 <li>
                                     <span class="fa-li"><i class="fas fa-caret-right"></i></span>
@@ -295,7 +295,7 @@
                             <ul class="fa-ul mb-0">
                                 <li>
                                     <span class="fa-li"><i class="fas fa-caret-right"></i></span>
-                                    Assembled my projects relating to CS1566 (Pitt) Introduction to Computer Graphics (<b>C Programming, OpenGL</b>>) and modeling (<b>3ds Max, Photoshop</b>)
+                                    Assembled my projects relating to CS1566 (Pitt) Introduction to Computer Graphics (<b>C Programming, OpenGL</b>) and modeling (<b>3ds Max, Photoshop</b>)
                                 </li>
                             </ul>
                         </li>
