--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         Download Siyu's Resume
                     </a>
                     <span> / </span>
-                    <a href="https://drive.google.com/file/d/1cxlnTN6CAPdHA2IgmJ9YOQRm2-Ig5Xll/view?usp=sharing" download="Siyu_Zhang_Latest_Resume">
+                    <a href="https://drive.google.com/file/d/17WhrLuvbaq-Ak3Hat0Nh8u62nESqBDfX/view?usp=sharing" download="Siyu_Zhang_Latest_Resume">
                         下载张思语的简历
                     </a>
                     <br><br>
@@ -170,6 +170,17 @@
                             <div class="subheading mb-3">Bachelor of Science + Digital Media Certificate</div>
                             <div>Computer Science (honors)</div>
                             <p>GPA: 3.99 / 4.0</p>
+                            <p>Completed CS Main Courses and Letter Grades:</p>
+                            <ul class="fa-ul mb-0">
+                                <li>Intro to Computer Graphics: A+</li>
+                                <li>Intro to Machine Learning: A</li>
+                                <li>Intro to Computer Vision: A+</li>
+                                <li>Intro to Computer Architecture: A+</li>
+                                <li>Intro to Cloud Computing: A+</li>
+                                <li>Programming Languages for Web Applications: A+</li>
+                                <li>Algorithm Implementation: A+</li>
+                                <li>Data Structures: A</li>
+                            </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i>&nbsp August 2017 - December 2020</span></div>
                     </div>
