--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
                         5551 Carmly Avenue · Pittsburgh, PA 15232 · (917) 463-6301 ·
                         <a href="mailto:name@email.com">siz24@pitt.edu</a>
                     </div>
-                    <p class="lead mb-5">I'm a CG enthusiast who has a BS degree in Computer Science and graduated from the University of Pittsburgh recently (2020.12.12), starting to look for a spring internship or research opportunity related to the Computer Science field, especially Computer Graphics. As a Computer Science major, I'm fascinated by the Art made and enhanced by technology, including visual effects in films and Augment Reality.</p>
+                    <p class="lead mb-5">I'm a CG enthusiast who obtains the BS degree in Computer Science from the <i>University of Pittsburgh</i>. In August 2021, I will become a graduate student at EECS Department of <i>University of California, Berkeley</i> under the track of <b>VCCG (Visual Computing & Computer Graphics)</b>. As a Computer Science major, I'm fascinated by the Art made and enhanced by technology, including visual effects in films and Augment Reality.</p>
 
-                    <p class="lead mb-5">   As such, I've taken core courses, high-level advanced courses in computer science, and participated in several hackathons in Pittsburgh. And now I'd like to put that experience to good use, contributing to learning more about new technologies and advancing the technology. </p>
+                    <!-- <p class="lead mb-5">   As such, I've taken core courses, high-level advanced courses in computer science, and participated in several hackathons in Pittsburgh. And now I'd like to put that experience to good use, contributing to learning more about new technologies and advancing the technology. </p> -->
                     <a href="https://drive.google.com/file/d/1eilae5Xzbe90NxWci5JnqrLwMYj_7_ga/view?usp=sharing" download="Siyu_Zhang_Latest_Resume">
                         Download Siyu's Resume
                     </a>
@@ -75,6 +75,40 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
+                            <h3 class="mb-0">Research & Development (internship)</h3>
+                            <a href="http://www.zhuiguang.com/?page_id=22&lang=en"> <div class="subheading mb-3">Light Chaser Animation</div></a>
+                            <ul class="fa-ul mb-0">
+                                <li>
+                                    <span class="fa-li"><i class="fas fa-caret-right"></i></span>
+                                    Developed "KARASU" (a cloth simulator) for CFX group under the guidance of Haowei Han (R&D leader) 
+                                </li>
+                                <li>
+                                    <span class="fa-li"><i class="fas fa-caret-right"></i></span>
+                                    Implemented PBD, XPBD, FEM (with gradient descent) methods for cloth simulation
+                                </li>
+                                <li>
+                                    <span class="fa-li"><i class="fas fa-caret-right"></i></span>
+                                    Focused on GPU acceleration with CUDA and acceleration data structure (e.g. Spatial Hash, BVH)
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i>&nbsp 01.2021 - Present</span></div>
+                    </div>
+                    <!-- <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Cloud Devlopment Engineer (internship)</h3>
+                            <a href="https://en.wikipedia.org/wiki/Huawei"><div class="subheading mb-3">Huawei technologies Co., Ltd.</div></a>
+                            <ul class="fa-ul mb-0">
+                                <li>
+                                    <span class="fa-li"><i class="fas fa-caret-right"></i></span>
+                                    Developed an application (includes desktop and VR version using Unity3D) for city builder 
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i>&nbsp 05.2020 - 08.2020</span></div>
+                    </div> -->
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
                             <h3 class="mb-0">Senior Advisor of CSSA</h3>
                             <div class="subheading mb-3">Chinese Student and Scholar Association (CSSA) at University of Pittsburgh</div>
                             <ul class="fa-ul mb-0">
@@ -92,7 +126,7 @@
                                 </li>
                             </ul>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i>&nbsp 08.2020 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i>&nbsp 08.2020 - 04.2021</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -166,6 +200,13 @@
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
+                            <h3 class="mb-0">University of California, Berkeley</h3>
+                            <div class="subheading mb-3">Incoming graduate student of MEng. - VCCG (Visual Computing & Computer Graphics)</div>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i>&nbsp August 2021 - May 2022 (Expected)</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
                             <h3 class="mb-0">University of Pittsburgh</h3>
                             <div class="subheading mb-3">Bachelor of Science + Digital Media Certificate</div>
                             <div>Computer Science (honors)</div>
@@ -193,10 +234,10 @@
                     <h2 class="mb-5">Skills</h2>
                     <div class="subheading mb-3">Programming Languages</div>
                     <p style="font-size:1.4rem;">
-                        <span class="badge badge-info">C</span>
                         <span class="badge badge-info">C++</span>
-                        <span class="badge badge-info">C#</span>
+                        <span class="badge badge-info">C</span>
                         <span class="badge badge-info">Python</span>
+                        <span class="badge badge-info">C#</span>
                         <span class="badge badge-info">Java</span>
                         <span class="badge badge-info">MATLAB</span>
                         <span class="badge badge-info">R</span>
@@ -206,6 +247,7 @@
                     </p>
                     <div class="subheading mb-3">Frameworks & Tools</div>
                     <p style="font-size:1.4rem;">
+                        <span class="badge badge-info">CUDA</span>
                         <span class="badge badge-info">OpenGL</span>
                         <span class="badge badge-info">Docker</span>
                         <span class="badge badge-info">Flask</span>
@@ -213,6 +255,10 @@
                     </p>
                     <div class="subheading mb-3">Software</div>
                     <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Houdini
+                        </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             Blender
