--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                         <span class="text-primary">Zhang</span>
                     </h1>
                     <div class="subheading mb-5">
-                        5551 Carmly Avenue · Pittsburgh, PA 15232 · (917) 463-6301 ·
-                        <a href="mailto:name@email.com">siz24@pitt.edu</a>
+                        (917) 463-6301 ·
+                        <a href="mailto:name@email.com">c_u@berkeley.edu</a>
                     </div>
                     <p class="lead mb-5">I'm a CG enthusiast who obtains the BS degree in Computer Science from the <i>University of Pittsburgh</i>. In August 2021, I will become a graduate student at EECS Department of <i>University of California, Berkeley</i> under the track of <b>VCCG (Visual Computing & Computer Graphics)</b>. As a Computer Science major, I'm fascinated by the Art made and enhanced by technology, including visual effects in films and Augment Reality.</p>
 
@@ -66,6 +66,8 @@
                         <a class="social-icon" href="https://www.yelp.com/user_details?userid=WowhLAOgB_YIT4PYQogTdA"><i class="fab fa-yelp"></i></a>
                         <a class="social-icon" href="https://drive.google.com/file/d/1g4pQgENKm-9zZKCglpUdk3XMSHx4OE3g/view?usp=sharing" rel="imgtip[0]"><i class="fab fa-weixin"></i></a>
                     </div>
+                    <br><br>
+                    <p class="lead mb-5">Last update date: 2021-07-14</p>
                 </div>
             </section>
             <hr class="m-0" />
